# CSGLoco

./: .gitignore  LICENSE  README.md  batch_train_3seed_v2.sh  pyproject.toml  requirements.txt  run_all_evals.sh  run_all_evals_v2.py  run_evals_23.py  run_recovery1500_eval.py
configs/: eval.yaml  train_a1.yaml  train_anymal.yaml
docs/: REPRODUCE.md
results/eval_v2/: mpc_standard.json  overhead_profile.json  recovery_1500_seed1_standard.json  recovery_1500_seed2_standard.json  recovery_1500_seed3_standard.json  recovery_1500_seed4_standard.json  recovery_1500_seed5_standard.json  recovery_1500_seed6_standard.json  sac_loco_seed1_standard.json  sac_loco_seed2_standard.json  sac_loco_seed3_standard.json  sac_loco_seed4_standard.json
safe_recovery_eval_v2/: cat_native_seed1.json  cat_native_seed2.json  cat_native_seed3.json  cat_seed1_fallen.json  cat_seed1_standard.json  cat_seed2_fallen.json  cat_seed2_standard.json  cat_seed3_fallen.json  cat_seed3_standard.json  recovery1500_seed1_standard.json  recovery1500_seed2_standard.json  recovery1500_seed3_standard.json  recovery_seed1_fallen.json  recovery_seed1_standard.json  recovery_seed2_fallen.json  recovery_seed2_standard.json  recovery_seed3_fallen.json  recovery_seed3_standard.json  vanilla_seed1_fallen.json  vanilla_seed1_standard.json  vanilla_seed2_fallen.json  vanilla_seed2_standard.json  vanilla_seed3_fallen.json  vanilla_seed3_standard.json
saferecovery/: __init__.py
saferecovery/controllers/: __init__.py  mpc.py
scripts/: aggregate_results.py  evaluate.py  smoke_test.py  train.py
(+6 files in other folders)
